--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
   <link rel="stylesheet" href="assets/css/what-you-get.css" />
   <link rel="stylesheet" href="assets/css/city-advantage.css" />
   <link rel="stylesheet" href="assets/css/mansion.css" />
+  <link rel="stylesheet" href="assets/css/curriculum.css" />
 
   <!-- =========================
        Structured Data (JSON-LD)
@@ -1005,6 +1006,352 @@
       </div>
     </section>
 
+
+<!-- =========================
+  10) CURRICULUM (HOW IT WORKS)
+  Tabs (desktop) + Accordion (mobile)
+========================= -->
+<section class="curriculum" id="curriculum" aria-label="Curriculum breakdown">
+  <div class="container curriculum__inner">
+
+    <header class="curriculum__header">
+      <p class="kicker">
+        <span class="k-dot" aria-hidden="true"></span>
+        Curriculum System
+      </p>
+
+      <h2 class="curriculum__title">
+        How it works:
+        <span class="gold"><strong>6 phases</strong></span> that build real-world skill
+      </h2>
+
+      <p class="curriculum__lede">
+        This isn’t random “going out.” Medellín Immersion is structured into phases so you always know
+        what to train, what to improve, and what to execute next — powered by the daily loop:
+        <span class="underline"><strong>Brief → Execute → Debrief</strong></span>.
+      </p>
+
+      <div class="curriculum__cta">
+        <a class="btn btn-primary" href="#apply">Apply for Medellín Immersion</a>
+        <a class="btn btn-secondary" href="#what-you-get">See what’s included</a>
+      </div>
+    </header>
+
+    <!-- Tabs -->
+    <div class="curriculum-tabs" data-tabs aria-label="Curriculum phases">
+      <div class="curriculum-tabs__nav" role="tablist" aria-label="Curriculum phase tabs">
+
+        <button class="tab is-active" role="tab" aria-selected="true" aria-controls="phase-1" id="tab-1" data-tab="phase-1">
+          <span class="tab__num">01</span>
+          <span class="tab__label">Foundation</span>
+        </button>
+
+        <button class="tab" role="tab" aria-selected="false" aria-controls="phase-2" id="tab-2" data-tab="phase-2">
+          <span class="tab__num">02</span>
+          <span class="tab__label">Execution</span>
+        </button>
+
+        <button class="tab" role="tab" aria-selected="false" aria-controls="phase-3" id="tab-3" data-tab="phase-3">
+          <span class="tab__num">03</span>
+          <span class="tab__label">Night</span>
+        </button>
+
+        <button class="tab" role="tab" aria-selected="false" aria-controls="phase-4" id="tab-4" data-tab="phase-4">
+          <span class="tab__num">04</span>
+          <span class="tab__label">Online</span>
+        </button>
+
+        <button class="tab" role="tab" aria-selected="false" aria-controls="phase-5" id="tab-5" data-tab="phase-5">
+          <span class="tab__num">05</span>
+          <span class="tab__label">Dates</span>
+        </button>
+
+        <button class="tab tab--gold" role="tab" aria-selected="false" aria-controls="phase-6" id="tab-6" data-tab="phase-6">
+          <span class="tab__num">06</span>
+          <span class="tab__label">Social Circle</span>
+          <span class="tab__tag">2.0</span>
+        </button>
+
+      </div>
+
+      <div class="curriculum-tabs__panels">
+
+        <!-- Phase 1 -->
+        <article class="panel is-active" id="phase-1" role="tabpanel" tabindex="0" aria-labelledby="tab-1">
+          <div class="panel__grid">
+            <div class="panel__copy">
+              <p class="panel__kicker"><span class="gold"><strong>Phase 1</strong></span> — Foundation</p>
+              <h3 class="panel__title">Build the baseline: vibe, frame, fundamentals</h3>
+              <p class="panel__text">
+                We build the fundamentals that make everything else work: how you move, how you speak,
+                and how you lead social moments without trying too hard. This phase sets your standard.
+              </p>
+              <ul class="panel__bullets">
+                <li>Body language, posture, voice, and calm presence</li>
+                <li>Openers, conversation flow, and social intuition</li>
+                <li>Frame control: leading without chasing</li>
+                <li>Standards: who you are inside the environment</li>
+              </ul>
+
+              <div class="panel__note">
+                <strong>Goal:</strong> you stop overthinking and start moving like a man who belongs.
+              </div>
+            </div>
+
+            <figure class="panel__media">
+              <img src="assets/images/curriculum/phase-1-foundation.jpg" alt="Foundation phase: presence, body language, and frame" loading="lazy">
+              <figcaption>Foundation first — your vibe becomes your advantage.</figcaption>
+            </figure>
+          </div>
+        </article>
+
+        <!-- Phase 2 -->
+        <article class="panel" id="phase-2" role="tabpanel" tabindex="0" aria-labelledby="tab-2">
+          <div class="panel__grid">
+            <div class="panel__copy">
+              <p class="panel__kicker"><span class="gold"><strong>Phase 2</strong></span> — Execution</p>
+              <h3 class="panel__title">Daily daygame reps + the feedback loop</h3>
+              <p class="panel__text">
+                Volume builds confidence. Calibration makes it sharp.
+                You’ll execute daygame daily with targets and drills — then we debrief and correct.
+              </p>
+              <ul class="panel__bullets">
+                <li>Approach mechanics and momentum under pressure</li>
+                <li>Conversation leadership, attraction, and escalation basics</li>
+                <li>Handling resistance and staying grounded</li>
+                <li><span class="underline"><strong>Brief → Execute → Debrief</strong></span> every day</li>
+              </ul>
+
+              <div class="panel__note">
+                <strong>Goal:</strong> approaching becomes normal — not a mental battle.
+              </div>
+            </div>
+
+            <figure class="panel__media">
+              <img src="assets/images/curriculum/phase-2-execution.jpg" alt="Execution phase: daygame reps and coaching calibration" loading="lazy">
+              <figcaption>Daily reps + daily calibration = fast growth.</figcaption>
+            </figure>
+          </div>
+        </article>
+
+        <!-- Phase 3 -->
+        <article class="panel" id="phase-3" role="tabpanel" tabindex="0" aria-labelledby="tab-3">
+          <div class="panel__grid">
+            <div class="panel__copy">
+              <p class="panel__kicker"><span class="gold"><strong>Phase 3</strong></span> — Night</p>
+              <h3 class="panel__title">Venues, groups, and high-energy social dynamics</h3>
+              <p class="panel__text">
+                Nightgame is different: faster pace, more social pressure, more group dynamics.
+                This phase teaches you how to navigate and lead high-energy rooms with composure.
+              </p>
+              <ul class="panel__bullets">
+                <li>Venue navigation and positioning</li>
+                <li>Group dynamics, social intelligence, and leadership</li>
+                <li>Escalation and decision-making in fast environments</li>
+                <li>Maintaining frame when the room is loud</li>
+              </ul>
+
+              <div class="panel__note">
+                <strong>Goal:</strong> you become the man who moves the room — not the man who watches.
+              </div>
+            </div>
+
+            <figure class="panel__media">
+              <img src="assets/images/curriculum/phase-3-night.jpg" alt="Night phase: elite venues, group dynamics, and leadership" loading="lazy">
+              <figcaption>Nightgame trains composure + leadership in real rooms.</figcaption>
+            </figure>
+          </div>
+        </article>
+
+        <!-- Phase 4 -->
+        <article class="panel" id="phase-4" role="tabpanel" tabindex="0" aria-labelledby="tab-4">
+          <div class="panel__grid">
+            <div class="panel__copy">
+              <p class="panel__kicker"><span class="gold"><strong>Phase 4</strong></span> — Online</p>
+              <h3 class="panel__title">Profile optimization, texting, funnels, logistics</h3>
+              <p class="panel__text">
+                Online game becomes effortless when you have a system.
+                We optimize your profile and build messaging flows that move women from DM to real life cleanly.
+              </p>
+              <ul class="panel__bullets">
+                <li>Profile strategy: photos, bio, positioning</li>
+                <li>Messaging frameworks that convert</li>
+                <li>Funnels and bridging online → offline</li>
+                <li>Logistics planning to reduce flake</li>
+              </ul>
+
+              <div class="panel__note">
+                <strong>Goal:</strong> you create options even when you’re not out.
+              </div>
+            </div>
+
+            <figure class="panel__media">
+              <img src="assets/images/curriculum/phase-4-online.jpg" alt="Online phase: dating apps, Instagram, messaging funnels" loading="lazy">
+              <figcaption>Online becomes a system — not chaos.</figcaption>
+            </figure>
+          </div>
+        </article>
+
+        <!-- Phase 5 -->
+        <article class="panel" id="phase-5" role="tabpanel" tabindex="0" aria-labelledby="tab-5">
+          <div class="panel__grid">
+            <div class="panel__copy">
+              <p class="panel__kicker"><span class="gold"><strong>Phase 5</strong></span> — Dates</p>
+              <h3 class="panel__title">Planning, leading, intimacy, consistency</h3>
+              <p class="panel__text">
+                The difference between “getting numbers” and real outcomes is leadership.
+                This phase teaches you how to structure dates, lead transitions, and build consistency.
+              </p>
+              <ul class="panel__bullets">
+                <li>Date structure: venues, pacing, and flow</li>
+                <li>Escalation and decision-making without hesitation</li>
+                <li>Logistics that turn momentum into outcomes</li>
+                <li>Consistency: moving from random wins to repeatable results</li>
+              </ul>
+
+              <div class="panel__note">
+                <strong>Goal:</strong> you lead calmly — and women feel it.
+              </div>
+            </div>
+
+            <figure class="panel__media">
+              <img src="assets/images/curriculum/phase-5-dates.jpg" alt="Dates phase: leading, logistics, and consistency" loading="lazy">
+              <figcaption>Dates are where leadership becomes real.</figcaption>
+            </figure>
+          </div>
+        </article>
+
+        <!-- Phase 6 -->
+        <article class="panel" id="phase-6" role="tabpanel" tabindex="0" aria-labelledby="tab-6">
+          <div class="panel__grid">
+            <div class="panel__copy">
+              <p class="panel__kicker"><span class="gold"><strong>Phase 6</strong></span> — Social Circle Mastery <span class="panel__tag">2.0 Upgrade</span></p>
+              <h3 class="panel__title">Build leverage: become the node</h3>
+              <p class="panel__text">
+                Cold approach is power — but social circle is leverage.
+                You’ll learn how to create invitations, build connections, host, and integrate so your lifestyle compounds.
+              </p>
+              <ul class="panel__bullets">
+                <li>Connection building and social positioning</li>
+                <li>Hosting, invitations, and momentum creation</li>
+                <li>Integration: how to enter groups naturally</li>
+                <li>Becoming “the node” — the connector people want around</li>
+              </ul>
+
+              <div class="panel__note">
+                <strong>Goal:</strong> you stop depending on randomness — and start generating access.
+              </div>
+            </div>
+
+            <figure class="panel__media">
+              <img src="assets/images/curriculum/phase-6-social-circle.jpg" alt="Social circle mastery: hosting, networking, becoming the connector" loading="lazy">
+              <figcaption>Social circle builds leverage that compounds.</figcaption>
+            </figure>
+          </div>
+        </article>
+
+      </div>
+    </div>
+
+    <!-- Mobile accordion (same content, simplified) -->
+    <details class="curriculum-acc" open>
+      <summary class="curriculum-acc__sum">
+        <span class="curriculum-acc__num">01</span>
+        <span class="curriculum-acc__label">Foundation</span>
+      </summary>
+      <div class="curriculum-acc__body">
+        <p>Fundamentals: body language, presence, vibe, openers, frame.</p>
+        <ul>
+          <li>Posture, voice, calm presence</li>
+          <li>Conversation flow & social intuition</li>
+          <li>Frame: leading without chasing</li>
+        </ul>
+      </div>
+    </details>
+
+    <details class="curriculum-acc">
+      <summary class="curriculum-acc__sum">
+        <span class="curriculum-acc__num">02</span>
+        <span class="curriculum-acc__label">Execution</span>
+      </summary>
+      <div class="curriculum-acc__body">
+        <p>Daily daygame reps + feedback loops.</p>
+        <ul>
+          <li>Targets, drills, calibration</li>
+          <li>Brief → Execute → Debrief daily</li>
+          <li>Confidence through volume</li>
+        </ul>
+      </div>
+    </details>
+
+    <details class="curriculum-acc">
+      <summary class="curriculum-acc__sum">
+        <span class="curriculum-acc__num">03</span>
+        <span class="curriculum-acc__label">Night</span>
+      </summary>
+      <div class="curriculum-acc__body">
+        <p>Venues, groups, social navigation, escalation.</p>
+        <ul>
+          <li>Positioning & venue navigation</li>
+          <li>Group dynamics & leadership</li>
+          <li>Escalation under pressure</li>
+        </ul>
+      </div>
+    </details>
+
+    <details class="curriculum-acc">
+      <summary class="curriculum-acc__sum">
+        <span class="curriculum-acc__num">04</span>
+        <span class="curriculum-acc__label">Online</span>
+      </summary>
+      <div class="curriculum-acc__body">
+        <p>Profile optimization, texting, funnels, logistics.</p>
+        <ul>
+          <li>Profile + photo structure</li>
+          <li>Message flows that convert</li>
+          <li>Online → offline bridging</li>
+        </ul>
+      </div>
+    </details>
+
+    <details class="curriculum-acc">
+      <summary class="curriculum-acc__sum">
+        <span class="curriculum-acc__num">05</span>
+        <span class="curriculum-acc__label">Dates</span>
+      </summary>
+      <div class="curriculum-acc__body">
+        <p>Planning, leading, intimacy, consistency.</p>
+        <ul>
+          <li>Date structure & venue selection</li>
+          <li>Escalation + decision-making</li>
+          <li>Consistency & repeatable results</li>
+        </ul>
+      </div>
+    </details>
+
+    <details class="curriculum-acc">
+      <summary class="curriculum-acc__sum curriculum-acc__sum--gold">
+        <span class="curriculum-acc__num">06</span>
+        <span class="curriculum-acc__label">Social Circle Mastery</span>
+        <span class="curriculum-acc__tag">2.0</span>
+      </summary>
+      <div class="curriculum-acc__body">
+        <p>Building connections, hosting, leverage, becoming “the node”.</p>
+        <ul>
+          <li>Hosting, invites, momentum</li>
+          <li>Integration into groups</li>
+          <li>Become the connector</li>
+        </ul>
+      </div>
+    </details>
+
+    <div class="curriculum__bottom-cta">
+      <a class="btn btn-primary" href="#apply">Apply Now</a>
+      <a class="btn btn-secondary" href="#schedule">View a typical week</a>
+    </div>
+
+  </div>
+</section>
 
 
 
