--- a/index.html
+++ b/index.html
@@ -118,37 +118,59 @@
   ========================== -->
   <a class="skip-link" href="#main">Skip to content</a>
 
-  <!-- =========================
-       Header / Nav
-  ========================== -->
   <header class="site-header" id="top">
-    <div class="container">
-      <div class="header-inner">
-        <a class="brand" href="#top" aria-label="Seducción Perú">
-          <img src="assets/images/logo.svg" alt="Seducción Perú" width="160" height="40" />
-        </a>
+    <div class="container header-container">
 
-        <nav class="site-nav" aria-label="Primary">
-          <ul class="nav-list">
-            <li><a href="#program">Program</a></li>
-            <li><a href="#experience">Experience</a></li>
-            <li><a href="#mansion"></a></li>
-            <li><a href="#results">Results</a></li>
-            <li><a href="#pricing">Options</a></li>
-            <li><a href="#faq">FAQ</a></li>
-          </ul>
-        </nav>
+      <!-- Brand -->
+      <a class="brand" href="#top" aria-label="Seducción Perú">
+        <img src="assets/images/logo.svg" alt="Seducción Perú" width="150" height="38" />
+      </a>
 
-        <div class="header-cta">
-          <a class="btn btn-primary" href="#apply">Apply Now</a>
-        </div>
+      <!-- Desktop Nav -->
+      <nav class="site-nav" aria-label="Primary navigation">
+        <ul class="nav-list">
+          <li><a href="#solution">Program</a></li>
+          <li><a href="#city">Why Medellín</a></li>
+          <li><a href="#mansion">The Mansion</a></li>
+          <li><a href="#curriculum">Curriculum</a></li>
+          <li><a href="#packages">Options</a></li>
+          <li><a href="#faq">FAQ</a></li>
+        </ul>
+      </nav>
 
-        <button class="nav-toggle" type="button" aria-label="Open menu" aria-expanded="false" data-nav-toggle>
-          <span></span><span></span><span></span>
-        </button>
+      <!-- CTA -->
+      <div class="header-cta">
+        <a class="btn btn-primary btn-sm" href="#apply">Apply Now</a>
       </div>
+
+      <!-- Mobile Toggle -->
+      <button class="nav-toggle" type="button"
+        aria-label="Open menu"
+        aria-expanded="false"
+        data-nav-toggle>
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+
+    </div>
+
+    <!-- Mobile Menu -->
+    <div class="mobile-nav" data-mobile-nav>
+      <ul class="mobile-nav-list">
+        <li><a href="#solution">Program</a></li>
+        <li><a href="#city">Why Medellín</a></li>
+        <li><a href="#mansion">The Base</a></li>
+        <li><a href="#curriculum">Curriculum</a></li>
+        <li><a href="#packages">Options</a></li>
+        <li><a href="#faq">FAQ</a></li>
+        <li class="mobile-cta">
+          <a class="btn btn-primary btn-block" href="#apply">Apply for Medellín Immersion</a>
+        </li>
+      </ul>
     </div>
   </header>
+
 
   <!-- =========================
        Main
@@ -2151,62 +2173,93 @@
 
       </div>
     </section>
-
-
-
-
   </main>
 
-  <!-- =========================
-       Footer
-  ========================== -->
-  <footer class="site-footer" aria-label="Footer">
-    <div class="container">
-      <div class="footer-grid">
-        <div class="footer-col">
-          <a class="brand" href="#top" aria-label="Seducción Perú">
-            <img src="assets/images/logo.svg" alt="Seducción Perú" width="160" height="40" />
-          </a>
-          <p>
-            Premium transformation coaching. High standards. Real-world execution.
-          </p>
-        </div>
 
-        <div class="footer-col">
-          <h3>Explore</h3>
-          <ul class="footer-links">
-            <li><a href="#program">Program</a></li>
-            <li><a href="#mansion"></a></li>
-            <li><a href="#gallery">Media</a></li>
-            <li><a href="#pricing">Options</a></li>
-            <li><a href="#faq">FAQ</a></li>
-          </ul>
-        </div>
+<footer class="site-footer" aria-label="Footer">
+  <div class="container footer-container">
 
-        <div class="footer-col">
-          <h3>Contact</h3>
-          <ul class="footer-links">
-            <li><a href="mailto:info@seduccionperu.com">info@seduccionperu.com</a></li>
-            <li><a href="#" rel="nofollow noopener">WhatsApp (add link)</a></li>
-            <li><a href="#" rel="nofollow noopener">Instagram (add link)</a></li>
-          </ul>
-        </div>
+    <div class="footer-grid">
 
-        <div class="footer-col">
-          <h3>Legal</h3>
-          <ul class="footer-links">
-            <li><a href="#" rel="nofollow">Privacy Policy</a></li>
-            <li><a href="#" rel="nofollow">Terms</a></li>
-            <li><a href="#safety">Standards</a></li>
-          </ul>
-        </div>
+      <!-- Brand / Positioning -->
+      <div class="footer-col footer-brand">
+        <a class="brand" href="#top" aria-label="Seducción Perú">
+          <img src="assets/images/logo.svg" alt="Seducción Perú" width="150" height="38" />
+        </a>
+
+        <p class="footer-tagline">
+          Premium real-world transformation.
+          <br>
+          High standards. Structured execution. Proven since 2016.
+        </p>
       </div>
 
-      <div class="footer-bottom">
-        <p>© <span id="year"></span> Seducción Perú. All rights reserved.</p>
+      <!-- Explore -->
+      <div class="footer-col">
+        <h3 class="footer-title">Explore</h3>
+        <ul class="footer-links">
+          <li><a href="#solution">Program</a></li>
+          <li><a href="#city">Why Medellín</a></li>
+          <li><a href="#mansion">The Base</a></li>
+          <li><a href="#curriculum">Curriculum</a></li>
+          <li><a href="#packages">Options</a></li>
+          <li><a href="#faq">FAQ</a></li>
+        </ul>
       </div>
+
+      <!-- Contact -->
+      <div class="footer-col">
+        <h3 class="footer-title">Contact</h3>
+        <ul class="footer-links">
+          <li>
+            <a href="mailto:info@seduccionperu.com">
+              info@seduccionperu.com
+            </a>
+          </li>
+          <li>
+            <a href="#" rel="nofollow noopener">
+              WhatsApp (after application)
+            </a>
+          </li>
+          <li>
+            <a href="#" rel="nofollow noopener">
+              Instagram
+            </a>
+          </li>
+        </ul>
+
+        <p class="footer-note">
+          We respond after application to maintain quality and discretion.
+        </p>
+      </div>
+
+      <!-- Legal / Standards -->
+      <div class="footer-col">
+        <h3 class="footer-title">Standards</h3>
+        <ul class="footer-links">
+          <li><a href="#" rel="nofollow">Privacy Policy</a></li>
+          <li><a href="#" rel="nofollow">Terms & Conditions</a></li>
+          <li><a href="#filters">Program Fit & Ethics</a></li>
+        </ul>
+      </div>
+
     </div>
-  </footer>
+
+    <!-- Bottom -->
+    <div class="footer-bottom">
+      <p>
+        © <span id="year"></span> Seducción Perú.
+        All rights reserved.
+      </p>
+    </div>
+
+  </div>
+</footer>
+
+<script>
+  document.getElementById('year').textContent = new Date().getFullYear();
+</script>
+
 
   <!-- =========================
        Scripts
